Add responsive hero title fixes and favicon

--- a/lang/en.json
+++ b/lang/en.json
@@ -249,10 +249,7 @@
     "destination_text": "Rustavi parking lot, Georgia",
     "working_hours": "Working Hours",
     "hours_text": "24/7 service",
-    "follow_us": "Follow Us",
-    "phone": "Phone: +995 551 305 305",
-    "email": "Email: megaplusrustavi@gmail.com",
-    "available": "Available: 24/7"
+    "follow_us": "Follow Us"
   },
   "faq": {
     "title": "Frequently Asked Questions",
