--- a/lang/ge.json
+++ b/lang/ge.json
@@ -238,9 +238,7 @@
     "destination_text": "რუსთავის სპეცავტოსადგომი, საქართველო",
     "working_hours": "სამუშაო საათები",
     "hours_text": "24/7 მომსახურება",
-    "follow_us": "გამოგვყევით",
-    "phone": "ტელეფონი: +995 551 305 305",
-    "available": "ხელმისაწვდომი: 24/7"
+    "follow_us": "გამოგვყევით"
   },
   "faq": {
     "title": "ხშირად დასმული კითხვები",
