--- a/lang/ru.json
+++ b/lang/ru.json
@@ -237,10 +237,7 @@
     "destination_text": "Автостоянка в Рустави, Грузия",
     "working_hours": "Часы работы",
     "hours_text": "Круглосуточно (24/7)",
-    "follow_us": "Подписывайтесь на нас",
-    "phone": "Телефон: +995 551 305 305",
-    "email": "Электронная почта: megaplusrustavi@gmail.com",
-    "available": "Доступно: 24/7"
+    "follow_us": "Подписывайтесь на нас"
   },
   "faq": {
     "title": "Часто задаваемые вопросы",
