Change default HTML language to Georgian (ka) and update all hardcoded text to Georgian

--- a/lang/ge.json
+++ b/lang/ge.json
@@ -6,7 +6,7 @@
     "contact": "კონტაქტი"
   },
   "hero": {
-    "title": "ევაკუატორის პროფესიონალური მომსახურება",
+    "title": "ევაკუატორის მომსახურება რუსთავსა და რეგიონებში",
     "subtitle": "24/7 საავარიო გადაყვანა და ტექნიკური დახმარება",
     "cta": "დაგვირეკეთ ახლავე"
   },
