--- a/lang/ru.json
+++ b/lang/ru.json
@@ -6,7 +6,7 @@
     "contact": "Контакты"
   },
   "hero": {
-    "title": "Профессиональные услуги эвакуации",
+    "title": "Услуги эвакуатора в Рустави и регионах",
     "subtitle": "Круглосуточная эвакуация и техпомощь на дорогах",
     "cta": "Позвоните нам сейчас"
   },
