--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,7 @@
     "contact": "Contact"
   },
   "hero": {
-    "title": "Professional Evacuation Services",
+    "title": "Tow Truck Services in Rustavi and Regions",
     "subtitle": "24/7 Emergency Towing & Recovery Solutions",
     "cta": "Call Us Now"
   },
