Update privacy page and Georgian translations

--- a/lang/ka.json
+++ b/lang/ka.json
@@ -266,7 +266,7 @@
     "available": "ხელმისაწვდომი: 24/7",
     "follow_us": "გამოგვყევით",
     "copyright": "© 2025 MEGA+ Towing. All rights reserved.",
-    "privacy": "კონფიდენციალობა",
+    "privacy": "კონფიდენციალურობა",
     "terms": "პირობები"
   }
 }
