Add multi-language meta descriptions

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+  "meta_description": "MEGA+ Towing - Professional 24/7 evacuation, recovery, and towing services in Georgia. Emergency roadside assistance, crane service, tire change, fuel delivery, and more.",
   "nav": {
     "home": "Home",
     "services": "Services",
