--- a/lang/ka.json
+++ b/lang/ka.json
@@ -1,4 +1,5 @@
 {
+  "meta_description": "მეგა+ ევაკუატორის პროფესიონალური სერვისი რუსთავსა და მთლიან საქართველოში. გამოიძახე ევაკუატორი თუ სხვა მომსახურება სწრაფად და უსაფრთხოდ, დაბალ ფასში",
   "nav": {
     "home": "მთავარი",
     "services": "სერვისები",
