--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,4 +1,5 @@
 {
+  "meta_description": "Профессиональный эвакуатор Mega+ в Рустави и по всей Грузии. Вызовите эвакуатор или другую службу быстро, безопасно и недорого.",
   "nav": {
     "home": "Главная",
     "services": "Услуги",
