Improve SEO: Georgian-first content, meta tags, keywords, and titles

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-  "meta_description": "MEGA+ Towing - Professional 24/7 evacuation, recovery, and towing services in Georgia. Emergency roadside assistance, crane service, tire change, fuel delivery, and more.",
+  "meta_description": "Mega+ professional tow truck service in Rustavi and all over Georgia. Call a tow truck or other service quickly and safely, at a low price",
   "nav": {
     "home": "Home",
     "services": "Services",
@@ -7,7 +7,7 @@
     "contact": "Contact"
   },
   "hero": {
-    "title": "Tow Truck Services in Rustavi and Regions",
+    "title": "Auto Help - Evacuator Georgia 24/7 MEGA+",
     "subtitle": "24/7 Emergency Towing & Recovery Solutions",
     "cta": "Call Us Now"
   },
