--- a/lang/ka.json
+++ b/lang/ka.json
@@ -7,8 +7,8 @@
     "contact": "კონტაქტი"
   },
   "hero": {
-    "title": "ევაკუატორის მომსახურება რუსთავსა და რეგიონებში",
-    "subtitle": "24/7 საავარიო გადაყვანა და ტექნიკური დახმარება",
+    "title": "ავტო დახმარება - ევაკუატორი საქართველოში 24/7 - MEGA+",
+    "subtitle": "24/7 საავარიო გადაყვანა და ავტო ტექნიკური დახმარება",
     "cta": "დაგვირეკეთ ახლავე"
   },
   "sticky_btn": "დაგვირეკეთ",
