--- a/lang/ru.json
+++ b/lang/ru.json
@@ -7,7 +7,7 @@
     "contact": "Контакты"
   },
   "hero": {
-    "title": "Услуги эвакуатора в Рустави и регионах",
+    "title": "Автопомощь — эвакуатор в Грузии 24/7 — MEGA+",
     "subtitle": "Круглосуточная эвакуация и техпомощь на дорогах",
     "cta": "Позвоните нам сейчас"
   },
